[workspace]
members = ["hello_world", "asynchronous", "concurrency", "concurrency_join", "fnonce_simple", "closure_simple",
    "closure_async", "closure_async_return_result", "common-lib"]

[workspace.package]
version = "0.0.1"
authors = ["Manas Das"]
description = "Tokio examples"
documentation = "https://example.com/bar"
edition = "2021"
rust-version = "1.66.1"

[workspace.dependencies]
tokio = { version="1.24.1", features = ["full"] }
serde = { version="1.0.152", features = ["derive"] }
reqwest = { version="0.11.14", features = ["json"] }
