[workspace]
members = ["hello_world", "asynchronous", "concurrency", "concurrency_join", "fnonce_simple", "closure_simple",
    "closure_async", "closure_async_return_result", "service_listner", "common-lib"]

[workspace.package]
version = "0.0.1"
authors = ["Manas Das"]
description = "Tokio examples"
documentation = "https://example.com/bar"
edition = "2021"
rust-version = "1.71.1"

[workspace.dependencies]
tokio = { version="1.31.0", features = ["full"] }
serde = { version="1.0.152", features = ["derive"] }
reqwest = { version="0.11.14", features = ["json"] }
serde_json = "1.0.102"
rand = "0.8.5"