[package]
name = "service_listner"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Simple service listner"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
common-lib = { path = "../common-lib" }